# AIgentsV2

./: Dockerfile  README copy.md  README.md  docker-compose.yml  railway.toml  start_worker.sh
agents/: __init__.py  base_agent.py  pm_agent.py  qa_agent.py  security_agent.py
api/: __init__.py  main.py  middleware.py  schemas.py
api/routers/: __init__.py  agents.py  projects.py  tasks.py  webhooks.py
core/: __init__.py  config.py  cost_tracker.py
core/tools/: browser_tool.py  deploy_tool.py  github_tool.py
memory/: rag_pipeline.py  vector_store.py
observability/: __init__.py  langsmith_tracer.py  logger.py  metrics.py
orchestration/: __init__.py  crew_manager.py  human_in_loop.py  task_queue.py  workflow_graph.py
prometheus/: prometheus.yml
saas-agent-team/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
saas-agent-team/agents/: architect_agent.py  dev_agent.py  devops_agent.py  research_agent.py
saas-agent-team/api/: dependencies.py  main.py
saas-agent-team/api/routers/: costs.py
saas-agent-team/core/: batch_processor.py  cache_manager.py  config.py  llm_router.py
saas-agent-team/core/tools/: __init__.py  code_sandbox.py  shell_tool.py
saas-agent-team/grafana/provisioning/dashboards/: dashboard.yml
saas-agent-team/memory/: __init__.py  cache.py  database.py
saas-agent-team/observability/: langsmith_tracer.py
saas-agent-team/orchestration/: crew_manager.py  task_queue.py
saas-agent-team/tests/test_cost_tracker/: test_cost_calculation.py
tests/: conftest.py
tests/test_agents/: test_cache_manager.py  test_llm_router.py
tests/test_api/: test_health.py
tests/test_cost_tracker/: test_batch_processor.py
